# lib_exiv

./: CMakeLists.txt  README.md
cmake/: FindExtICONV.cmake  compilerFlags.cmake  findDependencies.cmake  util.cmake
include/: CMakeLists.txt
include/exiv2/: CMakeLists.txt
opt/: folders.csv
src/: CMakeLists.txt
xmpsdk/: CMakeLists.txt
